adjusted the copyright under the footer

--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -39,7 +39,7 @@
 
    </main> 
    <footer>
-    <p>Copyright &copy; Techcon2024. All rights reserved.</p>
+    <p>copyright &copy; Techcon2024. All rights reserved.</p>
    </footer>
 </body>
 </html>
